--- a/index.html
+++ b/index.html
@@ -22,14 +22,29 @@
             padding: 0 20px;
         }
         /* Header */
-        header {
-            background: rgba(0, 0, 0, 0.95);
-            box-shadow: 0 2px 5px rgba(218, 165, 32, 0.3);
+        .modern-header {
             position: fixed;
-            width: 100%;
-            top: 0;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #1e1e1e;
+            border: 2px solid #00ffae;
+            border-radius: 50px;
+            padding: 12px 30px;
+            box-shadow: 0 0 20px #00ffae;
             z-index: 1000;
-            border-bottom: 1px solid #daa520;
+            transition: all 0.3s ease;
+            width: calc(100% - 60px);
+            max-width: 1100px;
+        }
+        .header-scrolled {
+            top: 0;
+            border-radius: 0;
+            width: 100%;
+            max-width: 100%;
+            left: 0;
+            transform: none;
+            box-shadow: 0 5px 15px rgba(0, 255, 174, 0.4);
         }
         .nav-container {
             max-width: 1200px;
@@ -39,6 +54,22 @@
             justify-content: space-between;
             align-items: center;
             height: 70px;
+        }
+        .phone-link {
+            color: #1e1e1e;
+            font-weight: bold;
+            text-decoration: none;
+            background-color: #00ffae;
+            padding: 10px 18px;
+            border-radius: 30px;
+            transition: background-color 0.3s, box-shadow 0.3s;
+            font-size: 14px;
+            box-shadow: 0 0 10px #00ffae;
+        }
+        .phone-link:hover {
+            background-color: #007bff;
+            color: #fff;
+            box-shadow: 0 0 15px #007bff;
         }
         .logo {
             color: #daa520;
@@ -57,7 +88,8 @@
             transition: color 0.3s;
         }
         .nav-menu a:hover {
-            color: #daa520;
+            color: #00ffae;
+            text-shadow: 0 0 8px #00ffae;
         }
         /* Hero Section */
         .hero {
