--- a/index.html
+++ b/index.html
@@ -365,16 +365,17 @@
     </style>
 </head>
 <body>
-    <header>
+    <header class="modern-header">
         <nav>
             <div class="nav-container">
-                <h1 class="logo">Jeremiah's WebDev</h1>
+                <img src="images/logo1.png" alt="Jeremiah's Logo" class="site-logo">
                 <ul class="nav-menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#home">Why Us?</a></li>
+                    <li><a href="#services">What We Offer?</a></li>
+                    <li><a href="#portfolio">Our Work?</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+                <a class="phone-link" href="tel:8654385840">📞 865-438-5840</a>
             </div>
         </nav>
     </header>
