--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeremiah's Web Development Portfolio</title>
     <style>
+        /* Global Styles */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
             color: #f5f5dc;
             background-color: #000;
         }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
         }
-        /* Header */
+
+        /* Header Styles */
         .modern-header {
             position: fixed;
             top: 20px;
@@ -37,6 +41,7 @@
             width: calc(100% - 60px);
             max-width: 1100px;
         }
+
         .header-scrolled {
             top: 0;
             border-radius: 0;
@@ -46,8 +51,9 @@
             transform: none;
             box-shadow: 0 5px 15px rgba(0, 255, 174, 0.4);
         }
+
         .nav-container {
-            max-width: 1200px;
+            max-width: 1100px;
             margin: 0 auto;
             padding: 0 20px;
             display: flex;
@@ -55,6 +61,13 @@
             align-items: center;
             height: 70px;
         }
+
+        .site-logo {
+            height: 40px;
+            width: auto;
+            margin-right: 20px;
+        }
+
         .phone-link {
             color: #1e1e1e;
             font-weight: bold;
@@ -66,27 +79,32 @@
             font-size: 14px;
             box-shadow: 0 0 10px #00ffae;
         }
+
         .phone-link:hover {
             background-color: #007bff;
             color: #fff;
             box-shadow: 0 0 15px #007bff;
         }
+
         .logo {
             color: #daa520;
             font-size: 1.5rem;
             font-weight: bold;
         }
+
         .nav-menu {
             display: flex;
             list-style: none;
             gap: 30px;
         }
+
         .nav-menu a {
             text-decoration: none;
             color: #f5f5dc;
             font-weight: 500;
             transition: color 0.3s;
         }
+
         .nav-menu a:hover {
             color: #00ffae;
             text-shadow: 0 0 8px #00ffae;
@@ -365,19 +383,17 @@
     </style>
 </head>
 <body>
-    <header class="modern-header">
-        <nav>
-            <div class="nav-container">
-                <img src="images/logo1.png" alt="Jeremiah's Logo" class="site-logo">
-                <ul class="nav-menu">
-                    <li><a href="#home">Why Us?</a></li>
-                    <li><a href="#services">What We Offer?</a></li>
-                    <li><a href="#portfolio">Our Work?</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <a class="phone-link" href="tel:8654385840">📞 865-438-5840</a>
-            </div>
-        </nav>
+     <header class="modern-header" id="main-header">
+        <div class="nav-container">
+            <img src="images/logo1.png" alt="Logo" class="site-logo">
+            <ul class="nav-menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">What We Offer?</a></li>
+                <li><a href="#portfolio">Our Work?</a></li>
+                <li><a href="#contact">Why Us?</a></li>
+            </ul>
+            <a class="phone-link" href="tel:8654385840">Call: 865-438-5840</a>
+        </div>
     </header>
     <main>
         <section id="home" class="hero">
@@ -559,6 +575,15 @@
             } else {
                 header.style.background = 'rgba(0, 0, 0, 0.95)';
                 header.style.backdropFilter = 'none';
+            }
+        });
+        
+         window.addEventListener('scroll', function () {
+            const header = document.getElementById('main-header');
+            if (window.scrollY > 40) {
+                header.classList.add('header-scrolled');
+            } else {
+                header.classList.remove('header-scrolled');
             }
         });
     </script>
