--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             left: 50%;
             transform: translateX(-50%);
             background-color: #1e1e1e;
-            border: 2px solid #00ffae;
+            border: 2px solid #a020f0;
             border-radius: 50px;
             padding: 12px 30px;
-            box-shadow: 0 0 20px #00ffae;
+            box-shadow: 0 0 20px #a020f0;
             z-index: 1000;
             transition: all 0.3s ease;
             width: calc(100% - 60px);
@@ -72,18 +72,18 @@
             color: #1e1e1e;
             font-weight: bold;
             text-decoration: none;
-            background-color: #00ffae;
+            background-color: #a020f0;
             padding: 10px 18px;
             border-radius: 30px;
             transition: background-color 0.3s, box-shadow 0.3s;
             font-size: 14px;
-            box-shadow: 0 0 10px #00ffae;
+            box-shadow: 0 0 10px #a020f0;
         }
 
         .phone-link:hover {
-            background-color: #007bff;
+            background-color: #a020f0;
             color: #fff;
-            box-shadow: 0 0 15px #007bff;
+            box-shadow: 0 0 15px #a020f0;
         }
 
         .logo {
@@ -107,7 +107,7 @@
 
         .nav-menu a:hover {
             color: #00ffae;
-            text-shadow: 0 0 8px #00ffae;
+            text-shadow: 0 0 8px #a020f0;
         }
         /* Hero Section */
         .hero {
