--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
 
         .header-scrolled {
             top: 0;
+            left: 0;
+            transform: none;
             border-radius: 0;
             width: 100%;
             max-width: 100%;
-            left: 0;
-            transform: none;
             box-shadow: 0 5px 15px rgba(160, 32, 240, 0.4);
+            border: none;
         }
 
         .nav-container {
@@ -81,9 +82,9 @@
         }
 
         .phone-link:hover {
-            background-color: #a020f0;
+            background-color: #007bff;
             color: #fff;
-            box-shadow: 0 0 15px #a020f0;
+            box-shadow: 0 0 15px #007bff;
         }
 
         .logo {
@@ -106,9 +107,10 @@
         }
 
         .nav-menu a:hover {
-            color: #00ffae;
+            color: #a020f0;
             text-shadow: 0 0 8px #a020f0;
         }
+
         /* Hero Section */
         .hero {
             background: linear-gradient(135deg, #1a1a1a 0%, #333 50%, #1a1a1a 100%);
