--- a/index.html
+++ b/index.html
@@ -28,35 +28,24 @@
         /* Header Styles */
         .modern-header {
             position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
+            top: 0;
+            left: 0;
             background-color: #1e1e1e;
-            border: 2px solid #a020f0;
-            border-radius: 50px;
-            padding: 12px 30px;
-            box-shadow: 0 0 20px #a020f0;
+            border-bottom: 2px solid #a020f0;
+            box-shadow: 0 5px 15px rgba(160, 32, 240, 0.4);
+            width: 100%;
             z-index: 1000;
             transition: all 0.3s ease;
-            width: calc(100% - 60px);
-            max-width: 1100px;
         }
 
         .header-scrolled {
-            top: 0;
-            left: 0;
-            transform: none;
             border-radius: 0;
-            width: 100%;
-            max-width: 100%;
-            box-shadow: 0 5px 15px rgba(160, 32, 240, 0.4);
-            border: none;
         }
 
         .nav-container {
             max-width: 1100px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 10px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -110,7 +99,6 @@
             color: #a020f0;
             text-shadow: 0 0 8px #a020f0;
         }
-
         /* Hero Section */
         .hero {
             background: linear-gradient(135deg, #1a1a1a 0%, #333 50%, #1a1a1a 100%);
