--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeremiah's Web Development Portfolio</title>
     <style>
-        /* Global Styles */
         * {
             margin: 0;
             padding: 0;
@@ -25,12 +24,11 @@
             padding: 0 20px;
         }
 
-        /* Header Styles */
         .modern-header {
             position: fixed;
             top: 0;
             left: 0;
-            background-color: #2e2e2e; /* Lightened from #1e1e1e */
+            background-color: #2e2e2e;
             border-bottom: 2px solid #a020f0;
             box-shadow: 0 5px 15px rgba(160, 32, 240, 0.4);
             width: 100%;
@@ -51,7 +49,6 @@
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            height: auto;
         }
 
         .site-logo {
@@ -73,6 +70,54 @@
             white-space: nowrap;
         }
 
+        .phone-link:hover {
+            background-color: #007bff;
+            color: #fff;
+            box-shadow: 0 0 15px #007bff;
+        }
+
+        .logo {
+            color: #daa520;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .nav-menu {
+            display: flex;
+            list-style: none;
+            gap: 30px;
+            flex-wrap: wrap;
+        }
+
+        .nav-menu a {
+            text-decoration: none;
+            color: #f5f5dc;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        .nav-menu a:hover {
+            color: #a020f0;
+            text-shadow: 0 0 8px #a020f0;
+        }
+
+        @media (max-width: 768px) {
+            .nav-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .nav-menu {
+                flex-direction: column;
+                width: 100%;
+                gap: 10px;
+                margin: 10px 0;
+                align-items: center;
+            }
+
+            .phone-link {
+                margin-top: 10px;
+            }
         .phone-link:hover {
             background-color: #007bff;
             color: #fff;
