--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
                         <div class="portfolio-card">
-                            <h3>The Checkered Flag Store</h3>
+                            <h3>aAttraction Template</h3>
                             <div class="device-mockup">
                                 <div class="macbook">
                                     <div class="macbook-screen"></div>
@@ -656,7 +656,7 @@
                     </div>
                     <div class="portfolio-item">
                         <div class="portfolio-card">
-                            <h3>Browning SRC Store</h3>
+                            <h3>Handyman Templates</h3>
                             <div class="device-mockup">
                                 <div class="macbook">
                                     <div class="macbook-screen"></div>
