--- a/index.html
+++ b/index.html
@@ -635,42 +635,42 @@
         </section>
 
         <section id="portfolio" class="portfolio">
-            <div class="container">
-                <h2>Portfolio</h2>
-                <p>Here are some websites I've created:</p>
-                <div class="portfolio-grid">
-                    <div class="portfolio-item">
-                        <div class="portfolio-card">
-                            <h3>aAttraction Template</h3>
-                            <div class="device-mockup">
-                                <div class="macbook">
-                                    <div class="macbook-screen"></div>
-                                </div>
-                                <div class="phone">
-                                    <div class="phone-screen"></div>
-                                </div>
-                            </div>
-                            <p>E-commerce website with modern design and mobile optimization</p>
-                            <a href="https://thecheckeredflag.store" target="_blank" class="portfolio-link">View Site</a>
-                        </div>
+          <div class="container">
+            <h2>Portfolio</h2>
+            <p>Here are some websites I've created:</p>
+            <div class="portfolio-grid">
+              <div class="portfolio-item">
+                <div class="portfolio-card">
+                  <h3>aAttraction Template</h3>
+                  <div class="device-mockup">
+                    <div class="macbook">
+                      <img src="images/IMG_2580 2.jpg" class="macbook-screen" alt="MacBook Website Preview">
                     </div>
-                    <div class="portfolio-item">
-                        <div class="portfolio-card">
-                            <h3>Handyman Templates</h3>
-                            <div class="device-mockup">
-                                <div class="macbook">
-                                    <div class="macbook-screen"></div>
-                                </div>
-                                <div class="phone">
-                                    <div class="phone-screen"></div>
-                                </div>
-                            </div>
-                            <p>Professional store website with clean layout and user-friendly navigation</p>
-                            <a href="https://browningsrc.store" target="_blank" class="portfolio-link">View Site</a>
-                        </div>
+                    <div class="phone">
+                      <img src="images/IMG_2581.jpg" class="phone-screen" alt="Phone Website Preview">
                     </div>
+                  </div>
+                  <p>E-commerce website with modern design and mobile optimization</p>
+                  <a href="https://thecheckeredflag.store" target="_blank" class="portfolio-link">View Site</a>
                 </div>
+              </div>
+              <div class="portfolio-item">
+                <div class="portfolio-card">
+                  <h3>Handyman Templates</h3>
+                  <div class="device-mockup">
+                    <div class="macbook">
+                      <img src="images/IMG_2580 2.jpg" class="macbook-screen" alt="MacBook Website Preview">
+                    </div>
+                    <div class="phone">
+                      <img src="images/IMG_2581.jpg" class="phone-screen" alt="Phone Website Preview">
+                    </div>
+                  </div>
+                  <p>Professional store website with clean layout and user-friendly navigation</p>
+                  <a href="https://browningsrc.store" target="_blank" class="portfolio-link">View Site</a>
+                </div>
+              </div>
             </div>
+          </div>
         </section>
 
         <section id="contact" class="contact">
