--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <div class="portfolio-grid">
               <div class="portfolio-item">
                 <div class="portfolio-card">
-                  <h3>aAttraction Template</h3>
+                  <h3>The Checkered Flag Slot</h3>
                   <div class="device-mockup">
                     <div class="macbook">
                       <img src="images/IMG_2580 2.jpg" class="macbook-screen" alt="MacBook Website Preview">
@@ -656,7 +656,7 @@
               </div>
               <div class="portfolio-item">
                 <div class="portfolio-card">
-                  <h3>Handyman Templates</h3>
+                  <h3>Browning's Repair Co</h3>
                   <div class="device-mockup">
                     <div class="macbook">
                       <img src="images/IMG_2580 2.jpg" class="macbook-screen" alt="MacBook Website Preview">
