--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                             <div class="device-mockup">
                                 <div class="macbook">
                                     <div class="macbook-screen">
-                                        <img src="images/IMG_2580 2.jpg" alt="Checkered Flag Desktop View">
+                                        <img src="images/Screenshot 2025-05-31 at 10.39.02.png" alt="Checkered Flag Desktop View">
                                     </div>
                                 </div>
                                 <div class="phone">
@@ -675,12 +675,12 @@
                             <div class="device-mockup">
                                 <div class="macbook">
                                     <div class="macbook-screen">
-                                        <img src="images/brownings-desktop.jpg" alt="Brownings Desktop View">
+                                        <img src="images/Screenshot 2025-05-31 at 10.38.23.png" alt="Brownings Desktop View">
                                     </div>
                                 </div>
                                 <div class="phone">
                                     <div class="phone-screen">
-                                        <img src="images/brownings-mobile.jpg" alt="Brownings Mobile View">
+                                        <img src="images/IMG_2580.jpg" alt="Brownings Mobile View">
                                     </div>
                                 </div>
                             </div>
