--- a/index.html
+++ b/index.html
@@ -892,8 +892,8 @@
             <div class="billboard-container">
                 <div class="billboard">
                     <div class="hero-content">
-                        <h2>Lightning-Fast Affordable Websites</h2>
-                        <p>Fully hand-coded static websites that load instantly and convert visitors into customers</p>
+                        <h2>Need A Website?</h2>
+                        <p>I Build fully hand-coded static websites that load instantly and convert visitors into customers</p>
                         <a href="#contact" class="cta-button">Get Started Today</a>
                     </div>
                     <div class="billboard-lights">
