--- a/index.html
+++ b/index.html
@@ -436,10 +436,28 @@
                 background-color: #a020f0;
             }
             .get-started-link {
-                top: 65%;
-                padding: 12px 25px;
-                font-size: 16px;
+                position: absolute;
+                top: 62%;
+                right: 8%;
+                background: linear-gradient(to right, #ffffff, #cccccc);
+                color: #000;
+                font-weight: 900;
+                padding: 15px 30px;
+                border-radius: 40px;
+                text-decoration: none;
+                box-shadow: 0 0 10px rgba(255,255,255,0.2);
+                transition: all 0.3s ease;
+                z-index: 10;
+                font-size: 18px;
+                border: 2px solid #333;
+                text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
             }
+            .get-started-link:hover {
+                background: linear-gradient(to right, #cccccc, #ffffff);
+                box-shadow: 0 0 20px rgba(255,255,255,0.5);
+                transform: scale(1.05);
+            }
+
             .status-square {
                 width: 250px;
                 height: 250px;
@@ -815,7 +833,7 @@
             z-index: 2;
         }
         
-        @media (max-width: 480px) {
+        @media (max-width: 768px) {
             .billboard-wrapper {
                 padding: 100px 15px 60px;
             }
@@ -823,10 +841,11 @@
                 max-width: 100%;
             }
             .get-started-link {
-                top: 68%;
-                padding: 10px 20px;
-                font-size: 14px;
-            }
+                top: 65%;
+                right: 5%;
+                padding: 12px 25px;
+                font-size: 16px;
+                    }
             .services,
             .portfolio,
             .contact {
