--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,17 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label for="referral-source">How did you find us? *</label>
+                        <select id="referral-source" name="referral-source" required>
+                            <option value="">Select an option</option>
+                            <option value="word-of-mouth">Word of Mouth</option>
+                            <option value="yelp">Yelp</option>
+                            <option value="online-search">Online Search</option>
+                            <option value="facebook">Facebook</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="message">Project Details *</label>
                         <textarea id="message" name="message" rows="5" placeholder="Tell me about your project, what features you need, your business, etc." required></textarea>
                     </div>
