--- a/index.html
+++ b/index.html
@@ -1066,11 +1066,12 @@
                 <span class="slider"></span>
                 <div class="label-text">
                   <span>Monthly</span>
+                  <span>&nbsp;/&nbsp;</span>
                   <span>Yearly</span>
                 </div>
               </label>
             </div>
-        
+
             <div class="service-grid">
               <div class="service-card">
                 <h3>Static Website Package</h3>
