--- a/index.html
+++ b/index.html
@@ -1189,9 +1189,9 @@
                     <div class="form-group">
                         <label for="project-type">Project Type</label>
                         <select id="project-type" name="project-type">
-                            <option value="static">Static Website ($0 down, $50/month)</option>
-                            <option value="ecommerce">E-Commerce Package ($0 down, $125/month)</option>
-                            <option value="custom">Custom Project (Quote needed)</option>
+                            <option value="static">Static Website</option>
+                            <option value="ecommerce">E-Commerce Package</option>
+                            <option value="custom">Custom Project</option>
                             <option value="unsure">Not sure yet</option>
                         </select>
                     </div>
