--- a/index.html
+++ b/index.html
@@ -1022,9 +1022,9 @@
             <img src="images/logo2.png" alt="Logo" class="site-logo">
             
             <ul class="nav-menu" id="nav-menu">
-                <li><a href="#services">What We Offer?</a></li>
-                <li><a href="#portfolio">Our Work?</a></li>
-                <li><a href="#contact">Why Us?</a></li>
+                <li><a href="#services">What We Offer</a></li>
+                <li><a href="#portfolio">Our Work</a></li>
+                <li><a href="#contact">Contact Us</a></li>
                 <li class="mobile-phone">
                     <a href="tel:8654385840">Call: 865-438-5840</a>
                 </li>
