--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
 <div id="yelp-popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:9999; display:flex; justify-content:center; align-items:center;">
   <div style="background:#1a1a1a; border:3px solid #a020f0; border-radius:20px; padding:40px 30px; max-width:400px; text-align:center; color:#fff; box-shadow:0 0 30px rgba(160,32,240,0.6); position:relative;">
     <h2 style="margin-bottom:15px; font-size:24px; color:#a020f0;">💜 Get 10% Off!</h2>
-    <p style="margin-bottom:20px;">Already a customer? Leave a review on Yelp and get 10% off your secound month of service.</p>
+    <p style="margin-bottom:20px;">Already a customer? Leave a review on Yelp and get 10% off your second month of service.</p>
     <a href="https://www.yelp.com/biz/j-development-kodak?osq=J+Development&override_cta=Request+a+consultation" target="_blank" style="display:inline-block; padding:12px 25px; background:linear-gradient(45deg,#a020f0,#fff); color:#000; font-weight:bold; border-radius:30px; text-decoration:none; box-shadow:0 0 15px rgba(160,32,240,0.5);">Leave a Review</a>
     <button onclick="document.getElementById('yelp-popup').style.display='none'" style="position:absolute; top:10px; right:15px; font-size:24px; background:none; border:none; color:#fff; cursor:pointer;">×</button>
   </div>
