--- a/index.html
+++ b/index.html
@@ -242,23 +242,23 @@
         }
         
         .modern-header {
-            position: relative; /* not fixed */
-            top: auto;
-            width: fit-content;
-            background-color: rgba(46, 46, 46, 0.95);
-            border: 2px solid #a020f0;
-            box-shadow: 0 5px 15px rgba(160, 32, 240, 0.4);
-            z-index: 1000;
-            transition: all 0.4s ease;
-            border-radius: 50px;
-            backdrop-filter: blur(10px);
-            margin: 40px auto; /* space from top + center it */
-            padding: 12px 25px;
-            display: flex;
-            align-items: center;
-            gap: 40px;
+          position: relative;
+          top: auto;
+          width: fit-content;
+          background-color: rgba(0, 0, 0, 0.6);
+          border: 2px solid #a020f0;
+          box-shadow: 0 5px 15px rgba(160, 32, 240, 0.4);
+          z-index: 1000;
+          transition: all 0.4s ease;
+          border-radius: 50px;
+          backdrop-filter: blur(10px);
+          margin: 0 auto;
+          padding: 20px 25px;
+          display: flex;
+          align-items: center;
+          gap: 40px;
         }
-        
+
         .nav-container {
             display: flex;
             align-items: center;
