--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
             transition: all 0.4s ease;
             border-radius: 50px;
             backdrop-filter: blur(10px);
-            margin: 30px auto 0 auto; /* leaves space from top */
+            margin: 60px auto 0 auto; /* ⬅️ increased from 30px to 60px */
             padding: 20px 25px;
             display: flex;
             align-items: center;
             gap: 40px;
         }
-        
+
         .nav-container {
             display: flex;
             align-items: center;
