added faq to menu

--- a/index.html
+++ b/index.html
@@ -1487,12 +1487,13 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#services">What We Offer</a></li>
                 <li><a href="#portfolio">Our Work</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#contact">Contact Us</a></li>
                 <li class="mobile-phone">
                     <a href="tel:8654385840">Call: 865-438-5840</a>
                 </li>
             </ul>
-            
+
             <a class="phone-link" href="tel:8654385840">Call: 865-438-5840</a>
             
             <div class="hamburger" id="hamburger">
