Update link colors and font weights in index.html

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         }
 
         .nav-links a {
-            color: var(--gray-700);
+            color: var(--navy);
             text-decoration: none;
-            font-weight: 500;
+            font-weight: 700;
             transition: color 0.3s ease;
         }
 
@@ -114,6 +114,7 @@
             color: var(--navy);
             background: var(--white);
             border: 2px solid var(--gray-100);
+            font-weight: 700;
         }
 
         .cta-button.phone-cta:hover {
