--- a/index.html
+++ b/index.html
@@ -858,7 +858,8 @@
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </ul>
         <div class="mobile-menu-cta">
-            <a href="tel:865-438-5840">📞 Call Now</a>
+            <a href="tel:865-438-5840" style="margin-bottom: 1rem; display: inline-block;">📞 Call Now</a>
+            <a href="mailto:support@jdevelopment.site">📧 Email Us</a>
         </div>
     </div>
 
@@ -997,7 +998,7 @@
             <p>Let's build something amazing together. Get your professional website up and running in no time.</p>
             <div class="cta-buttons">
                 <a href="tel:865-438-5840" class="cta-primary">📞 Call: 865-438-5840</a>
-                <a href="mailto:contact@jdevelopment.com" class="cta-secondary">📧 Send Email</a>
+                <a href="mailto:support@jdevelopment.site" class="cta-secondary">📧 Send Email</a>
             </div>
         </div>
     </section>
@@ -1005,6 +1006,10 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 J Development. All rights reserved.</p>
+        <p style="margin-top: 1rem; opacity: 0.8;">
+            <a href="tel:865-438-5840" style="color: var(--white); text-decoration: none; margin: 0 1rem;">📞 865-438-5840</a> | 
+            <a href="mailto:support@jdevelopment.site" style="color: var(--white); text-decoration: none; margin: 0 1rem;">📧 support@jdevelopment.site</a>
+        </p>
     </footer>
 
     <script>
